@@ -5,7 +5,7 @@ Tab::Entry->columns(Primary => qw/id/);
 Tab::Entry->columns(Essential => qw/code dropped name school tourn event seed bid title ada waitlist 
 									dq drop_time reg_time timestamp drop_by reg_by off_waitlist tba 
 									self_reg_by unconfirmed sweeps placement/);
-Tab::Entry->columns(TEMP => qw/panelid speaks side ballot/);
+Tab::Entry->columns(TEMP => qw/panelid speaks side ballot othername/);
 
 Tab::Entry->has_a(school => 'Tab::School');
 Tab::Entry->has_a(tourn => 'Tab::Tourn');
