@@ -1049,7 +1049,7 @@ a.muted {
 }
 
 .rightalign {
-	text-align		: right;
+	text-align		: right !important;
 	padding-right	: 20px;
 }
 
@@ -1621,13 +1621,13 @@ li.sort-available:hover {
 }
 
 .judgechart { 
-	display      : inline-block;
-	width        : 165px;
-	padding-left : 3px;
-	margin-right : 8px;
-	white-space  : nowrap;
-	overflow     : hidden;
-	vertical-align: middle;
+	display        : inline-block;
+	width          : 165px;
+	padding-left   : 3px;
+	margin-right   : 8px;
+	white-space    : nowrap;
+	overflow       : hidden;
+	vertical-align : middle;
 }
 
 .medbigspan { 
@@ -1692,13 +1692,23 @@ li.sort-available:hover {
 	vertical-align : middle;
 }
 
+.biggerspan { 
+	display        : inline-block;
+	width          : 425px;
+	padding        : 3px;
+	padding-left   : 5px;
+	white-space    : nowrap;
+	overflow-x     : hidden;
+	vertical-align : middle;
+}
+
 .hugespan { 
-	display      : inline-block;
-	width        : 500px;
-	padding 	 : 3px;
-	padding-left : 5px;
-	overflow-x	 : hidden;
-	vertical-align: middle;
+	display        : inline-block;
+	width          : 500px;
+	padding        : 3px;
+	padding-left   : 5px;
+	overflow-x     : hidden;
+	vertical-align : middle;
 }
 
 .smallcell { 
