@@ -648,6 +648,12 @@
 				<% $event->abbr %> full roster
 			</a>
 
+%			if ($event->judge_group->setting("prefs")) { 
+				<a class="martop blue block" href="/register/entry/prefs.mhtml?entry_id=<% $entry->id %>&sort=school">
+					<% $entry->code %> Pref Sheet
+				</a>
+%			}
+
 		<h4>Print</h4>
 
 			<a class="blue block nowrap" href="print.mhtml?entry_id=<% $entry->id %>">
@@ -664,13 +670,6 @@
 
 			<a class="blue block nowrap" href="student_print.mhtml?student_id=<% $student->id %>">
 				Student <% $student->first." ".$student->last %> Info Sheet
-			</a>
-%		}
-
-%		if ($event->judge_group->setting("prefs")) { 
-
-			<a class="blue block" href="/register/entry/prefs.mhtml?entry_id=<% $entry->id %>&sort=school">
-				<% $entry->code %> Pref Sheet
 			</a>
 %		}
 
