@@ -12,21 +12,13 @@
 	");
 
 	my @pref_groups;
+
 	my %group_schools = ();
 
 	foreach my $group ($tourn->groups) { 
-
 		if ($group->setting('prefs')) { 
-
 			push (@pref_groups, $group);
-
-			foreach my $school ($m->comp("/funclib/group_schools.mas", group => $group)) { 
-				$group_schools{$school->id."-".$group->id}++;
-				$group_schools{$school->id}++;
-			}
-
 		}
-
 	}
 
 
@@ -46,15 +38,29 @@
 
 				<tr class="yellowrow">
 
+					<th class="smaller" colspan="2">
+						Entry
+					</th>
+
 					<th class="smaller">
 						School
 					</th>
 
-%					foreach my $group (@pref_groups) { 
-						<th class="smaller">
-							<% $group->abbr %>
-						</th>
-%					} 
+					<th class="smaller">
+						Tot
+					</th>
+
+					<th class="smaller">
+						Pref
+					</th>
+
+					<th class="smaller">
+						Cnfl
+					</th>
+
+					<th class="smaller">
+						Left
+					</th>
 
 				</tr>
 
@@ -62,35 +68,67 @@
 
 			<tbody>
 
-%				foreach my $school (sort {$a->name cmp $b->name} $tourn->schools) { 
+%				foreach my $group (@pref_groups) { 
 
-%					next unless $group_schools{$school->id};
-%					my @judges = Tab::Judge->search_preffed_by_school($school->id);
+%					my @judges = $group->judges( active => 1);
 
-%					my %jp_by_group = ();
-%					foreach my $judge (@judges) { 
-%						push (@{$jp_by_group{$judge->judge_group->id}}, $judge);
-%					}
+%					foreach my $event ($group->events) { 
 
-					<tr>
+%						foreach my $entry (sort {$a->name cmp $b->name} $event->entries( dropped => 0, waitlist => 0, unconfirmed => 0)) { 
 
-						<td class="smallish">
-							<% $school->short_name %>
-						</td>
+%							my @rated = $m->comp("/funclib/judge_entry_rating.mas", entry => $entry, type => "rated");
+%							my @conflicts = $m->comp("/funclib/judge_entry_rating.mas", entry => $entry, type => "conflicted");
 
-%						foreach my $group (@pref_groups) { 
-							<td class="smallish centeralign">
+%							my %used;
+%							foreach my $conf (@conflicts) {
+%								$used{$conf->id}++;
+%							}
+%							my @real_rated;
 
-%								if ($group_schools{$school->id."-".$group->id}) { 
-									<% $jp_by_group{$group->id} ? scalar @{$jp_by_group{$group->id}} : "0"%>
-%								} else { 
-									x
-%								} 
+%							foreach my $rate (@rated) {
+%								push @real_rated, $rate unless $used{$rate->id};
+%							}
 
-							</td>
+%							my $left = scalar @judges - (scalar @conflicts + scalar @real_rated);
+
+							<tr <% $left > 0 ? 'class="lirdrow"' : "" %>>
+
+								<td class="smallish">
+									<a class="plain block" href="/register/entry/prefs.mhtml?entry_id=<% $entry->id %>">
+										<% $entry->code %>
+									</a>
+								</td>
+
+								<td class="smallish medspan">
+									<a class="plain block" href="/register/entry/prefs.mhtml?entry_id=<% $entry->id %>">
+										<% $entry->name %>
+									</a>
+								</td>
+									
+								<td class="smallish medpsan">
+									<% $entry->school->short_name %>
+								</td>
+
+								<td class="centeralign smallish">
+									<% scalar @judges %>
+								</td>
+
+								<td class="centeralign smallish">
+									<% scalar @real_rated %>
+								</td>
+
+								<td class="centeralign smallish">
+									<% scalar @conflicts %>
+								</td>
+
+								<td class="centeralign smallish">
+									<% scalar @judges - (scalar @conflicts + scalar @real_rated) %>
+								</td>
+
+							</tr>
+
 %						} 
-
-					</tr>
+%					}
 
 %				}
 
