@@ -1,4 +1,10 @@
 
+	- Pref Report under Entries -> Reports is now by entry; it also shows you
+	  each entries ratings & number of conflicts, and clicking on the entry
+	  brings you to their pref sheet.
+
+	- Fixed a little odd one where hybrid team names were displaying twice.
+
 	- XML importer will pull the elim seeds from the CAT XML file in
 	  preparation for us being able to display a full bracket.
 
